Use final, remove redundant call to super(), use valueOf(), lambdas.